--- a/server/pom.xml
+++ b/server/pom.xml
@@ -17,6 +17,25 @@
 	<!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
 	<dependencies>
+
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.19</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.4.12.Final</version>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -31,12 +50,13 @@
 
 	<build>
 		<plugins>
+
 			<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>exec-maven-plugin</artifactId>
 					<version>1.6.0</version>
 					<configuration>
-						<mainClass>il.cshaifasweng.OCSFMediatorExample.server.App</mainClass>
+						<mainClass>il.cshaifasweng.OCSFMediatorExample.server.SimpleServer</mainClass>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -61,6 +81,7 @@
                                 <goal>single</goal>
                             </goals>
                         </execution>
+
                     </executions>
 				</plugin>
 		</plugins>
