--- a/server/pom.xml
+++ b/server/pom.xml
@@ -56,7 +56,7 @@
 					<artifactId>exec-maven-plugin</artifactId>
 					<version>1.6.0</version>
 					<configuration>
-						<mainClass>il.cshaifasweng.OCSFMediatorExample.server.SimpleServer</mainClass>
+						<mainClass>il.cshaifasweng.OCSFMediatorExample.server.App</mainClass>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -83,7 +83,33 @@
                         </execution>
 
                     </executions>
+
 				</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>il.cshaifasweng.OCSFMediatorExample.server.App</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+			<resource>
+				<directory>src/main/java</directory>
+				<includes>
+					<include>**/*.java</include>
+					<include>**/*.gwt.xml</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 </project>
