added elie's files

--- a/server/src/main/resources/hibernate.properties
+++ b/server/src/main/resources/hibernate.properties
@@ -9,4 +9,4 @@ hibernate.connection.serverTimezone = UTC
 # Change 'root' to your username
 hibernate.connection.username = root
 # Change 'password' to your password
-hibernate.connection.password = iphone8@F
+hibernate.connection.password = password
